<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">特运通</string>
    <string name="action_settings">设置</string>
    <string name="web_url">www.teyuntong.com</string>
    <string name="account">手机号</string>
    <string name="password">密  码</string>
    <string name="re_password">重复密码</string>
    <string name="qq">QQ</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证</string>
    <string name="id_entifying">验证码</string>
    <string name="re_get">再次获取</string>
    <string name="ok">确定</string>
    <string name="account_tip">请输入手机号码</string>
    <string name="password_tip">6~8位数字或字母</string>
    <string name="must_input">必填</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="register">新用户注册</string>
    <string name="save_account">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="err_phone_length">手机号码长度错误</string>
    <string name="err_password_length">密码长度错误(6~8位数字或字母)</string>
    <string name="err_no_qq">请输入qq号码</string>
    <string name="err_no_name">请输入姓名</string>
    <string name="err_id_card_err">身份证号码错误</string>
    <string name="err_no_verifycode">请输入验证码</string>
    <string name="err_verifycode">验证码错误</string>
    <string name="err_password_no_same">密码与重复密码不相同</string>
    <string name="err_net">网络错误，请检查网络稍后再试</string>
    <string name="err_server">服务器错误，请稍后再试</string>
    <string name="err_login_phone_not_exit">手机号不存在（请注册）</string>
    <string name="err_login_password_err">密码错误</string>
    <string name="err_login_account_not_for_this_pc">帐号与电脑不匹配</string>
    <string name="err_login_account_out_date">帐号已过期</string>
    <string name="err_login_soft_need_update">软件需要升级</string>
    <string name="err_login_account_not_actived">账号未激活</string>
    <string name="err_verifycode_get_ok">验证码发送成功</string>
    <string name="err_verifycode_get_fail">验证码发送失败</string>
    <string name="keep">收藏</string>
    <string name="has_keep">已收藏</string>
    <string name="release">发布</string>
    <string name="my_release">我的发布</string>
    <string name="search">搜索</string>
    <string name="has_end">设置目的地</string>
    <string name="car1">一号车</string>
    <string name="car2">二号车</string>
    <string name="car3">三号车</string>
    <string name="car4">四号车</string>
    <string name="start">出发地:</string>
    <string name="end">目的地:</string>
    <string name="range">范围:</string>
    <string name="kilometre">公里</string>
    <string name="pro">省</string>
    <string name="city">市</string>
    <string name="county">县</string>
    <string name="search_no_city">搜索必须指定到市</string>
    <string name="hide">隐藏</string>
    <string name="content">内容</string>
    <string name="time">时间</string>
    <string name="refresh">刷新</string>
    <string name="auto_refresh_open">自动刷新已开</string>
    <string name="auto_refresh_stop">自动刷新已关</string>
    <string name="re_search">重新搜索</string>
    <string name="search_condition">搜索条件:</string>
    <string name="info">信息:</string>
    <string name="phone">电话:</string>
    <string name="tip_time">时间:</string>
    <string name="tip_qq">QQ:</string>
    <string name="map">地图</string>
    <string name="release_time">发布时间</string>
    <string name="contact_time">联系时间</string>
    <string name="login_other">账号在其他地方登录，请注意账号安全</string>
    
    <string name="goods">货物:</string>
    
    <string name="err_no_start">缺少出发地</string>
	<string name="err_no_goods">缺少货物</string>
	<string name="err_no_phone">缺少电话号码</string>
	
	<string name="release_succ">发布成功</string>
	<string name="release_fail">发布失败</string>
	<string name="operate_succ">操作成功</string>
	<string name="operate_fail">操作失败</string>
	
	<string name="today">今日发布</string>
	<string name="history">历史记录</string>
	
	<string name="releasing">发布中</string>
	<string name="is_complete">已成交</string>
	<string name="orders_in_seven_day">近7日内记录</string>
	<string name="set_complete">设为成交</string>
	<string name="re_release">再次提交</string>
</resources>